# confluence-publisher

./: .claudesettings.json  .env.example  .gitignore  MCP.md  README.md  README_cn.md  crawl_sources.txt  pyproject.toml  requirements.txt
confluence_publisher/: __init__.py  config.py  crawl.py  mcp_server.py  publish.py  setup_cli.py
memorypoint/: mcp-server-process.md  pip-package-process.md
